--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   syncfusion_flutter_charts: ^21.2.5
   collection: ^1.15.0
   http: ^1.0.0
+  flutter_local_notifications: ^14.1.1
+  permission_handler: ^10.3.0
 
 dev_dependencies:
   flutter_test:
