--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   collection: ^1.15.0
   http: ^1.0.0
   flutter_launcher_icons: ^0.13.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
